--- a/Ohm'sLaw.HTML
+++ b/Ohm'sLaw.HTML
@@ -12,7 +12,7 @@ function Resistance()
 
 	var current;
 	var volt;
-	var ansRes
+	var ansRes;
 	
 	document.getElementById("output").innerHTML = "<p>Resistance Selected</p>";
 	
