--- a/Question1.HTML
+++ b/Question1.HTML
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>Question 1</TITLE>
+<TITLE>Average of three Numbers</TITLE>
 <SCRIPT LANGUAGE = "JavaScript">
 function main()
 {
@@ -32,8 +32,8 @@ function main()
 </SCRIPT>
 </HEAD>
 <BODY>
-<BODY BGCOLOR = white>
-<H2>Question 2</H2>
+<BODY BGCOLOR = "#bec3bb">
+<H2>Average of three Numbers</H2>
 <HR>
 <SCRIPT LANGUAGE="JavaScript">main();</SCRIPT>
 </BODY>
